--- a/laravel-app/.env.testing
+++ b/laravel-app/.env.testing
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=busca-app-testing
-DB_USERNAME=busca-app
-DB_PASSWORD=busca-app
+DB_USERNAME=root
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
